# formatpilot-vscode

./: .gitignore  CHANGELOG.md  EXTENSION_CHANGELOG.md  EXTENSION_README.md  IMPROVEMENTS.md  LICENSE  README copy.md  README.md  README.pt-BR copy.md  SECURITY.md  app.py  esbuild.js  install-uv.bat  install-uv.sh  package-lock.json  package.json  pyproject-extension.toml  pyproject.toml  teste-formatpilot.md
.github/workflows/: publish.yml
docs/: TECHNICAL.md
src/: README.md  README.pt-BR.md  extension.ts  pyproject.toml  requirements.txt
src/formatpilot/: __init__.py  converter.py  formatter.py
src/test/: extension.test.ts
tests/: test_converter.py
webapp/: app.py
webapp/templates/: index.html
